Assertion in disk cache code with redirect to a non-http resource https://bugs.webkit.org/show_bug.cgi?id=141644

Reviewed by Anders Carlsson.

Source/WebKit2:

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didFinishLoading):

    Check that response is HTTP before calling computeFreshnessLifetimeForHTTPFamily.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::canStore):

    Deny storing non-HTTP responses to cache (though the above already covers this).

LayoutTests:

* http/tests/cache/disk-cache-redirect-to-data-expected.txt: Added.
* http/tests/cache/disk-cache-redirect-to-data.html: Added.
* http/tests/cache/resources/redirect-to-data.php: Added.


Canonical link: https://commits.webkit.org/159669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180148 268f45cc-cd09-0410-ab3c-d52691b4dbfc