LayoutTests/http/tests/cache/resources/redirect-to-data.php
@@ -1,0 +1,4 @@
+<?
+header('Status: 301 Moved Permanently');
+header('Location: data:application/javascript,success=true;');
+?>
